--- a/1.html
+++ b/1.html
@@ -2,10 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <style>
+    div{
+      background-color: blue;
+      width:300 px;
+      height:200 px;
+      margin: 100 px;
+      padding: 300 px;
+    }
+    </style>
     <title>my webpage</title>
   </head>
   <body>
-    hello hoi hoi
-    oolti ka zor ha driver kamzor ha
+    <img src="IMG_0187.jpg">
   </body>
 </html>
