--- a/1.html
+++ b/1.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+      <title>my webpage</title>
     <style>
-    div{
-      background-color: blue;
-      width:300 px;
-      height:200 px;
-      margin: 100 px;
-      padding: 300 px;
+       div{
+      background-color: teal;
+      width:300px;
+      height:500px;
+      margin: 100px;
+      padding: 100px;
     }
     </style>
-    <title>my webpage</title>
+<style>
+div{
+  font font-family: arial;
+  font-size: 30px;
+  font-weight: bold;
+}
+</style>
+
+
   </head>
   <body>
-    <img src="IMG_0187.jpg">
+    <div>my webpage
+<img src="IMG_0187.jpg" width=300 px; height=500 px; padding:200 px;>
+    </div>
+
+
+
   </body>
 </html>
